<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.resume.parth.resume.Profile">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:text="@string/introduction"
            android:textColor="#ecf0f1"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv1"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_bright"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_pic"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:src="@drawable/profile" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_pic"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/degree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/degree"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/degree"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/mobile"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mobile"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/academic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="monospace"
            android:text="@string/academic"
            android:textColor="#ecf0f1"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rl2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/academic"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_bright"
            android:padding="10dp">

            <TextView
                android:id="@+id/course"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/course"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/courses"
                android:layout_width="200dp"
                android:layout_height="25dp"
                android:layout_above="@+id/pass_year"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/course"
                android:background="@android:color/background_light" />

            <TextView
                android:id="@+id/pass_year"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/course"
                android:layout_marginTop="10dp"
                android:text="@string/passing_year"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/pass_year_value"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/courses"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="12dp"
                android:layout_toEndOf="@+id/pass_year"
                android:gravity="center"
                android:text="Running"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/marks"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pass_year"
                android:layout_marginTop="10dp"
                android:text="CPI:"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/marks_value"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pass_year_value"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="12dp"
                android:layout_toEndOf="@+id/marks"
                android:gravity="center"
                android:text="7.7"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/skills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="monospace"
            android:text="@string/skills"
            android:textColor="#ecf0f1"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/skills"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_bright"
            android:padding="10dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical">

            </android.support.v7.widget.RecyclerView>


        </RelativeLayout>


    </RelativeLayout>
</ScrollView>
